videomixer: Fix synchronization if dynamically changing the FPS

https://bugzilla.gnome.org/show_bug.cgi?id=735859